M1 Task-12: virtual-thread cancellable, time-boxed query serving
QueryService wraps & owns an AnalysisSession, running each query on a
single-thread virtual-thread executor with a time-box (Future.get(deadline))
and cancellation (cancel(true)); on expiry it throws QueryTimeoutException.
The single worker structurally enforces one-writer-at-a-time over the shared
store, and the caller returns promptly even if a worker stalls.

EdgeResolver gains a cooperative cancel checkpoint at the top of the
ensureResolved candidate-file loop (unchecked CancellationException on
interrupt) — between files, never mid-applyEdit, so an interrupt can't tear
the overlay log. --deadline <ms|ms|s> is wired into refs/def/supertypes and
the REPL via a shared Deadline parser.

Scope overrides (user-approved, see M1-RESULTS): no cross-query concurrency,
no best-effort partial on timeout (deferred optimizations); no
StructuredTaskScope (still preview in JDK 25 — would force --enable-preview
through compile/test/run/native-image).

Measured: warm find_references p95 = 2.61 ms (p50 1.68 · p99 2.89; n=200) over
the commons-lang corpus, vs the < 200 ms budget — the Tier-2 edge cache turns
repeats into pure graph walks. Native green (image builds with the
virtual-thread executor).

Also raises the test JVM to maxHeapSize = "2g": the opt-in corpus ITs
(EdgeResolverCommonsIT, QueryLatencyTest; both assume a local git-ignored
corpus) resolve a 527-file project through JavaSymbolSolver, whose retained
AST set overflows Gradle's default 512 MB heap into a GC death-spiral. CI
(corpus absent) is unaffected.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>